--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,7 +3,7 @@
 
             <div class="row">
                 <div class="col-sm-6">
-                    <h3>Get in touch to request my portfolio or chat about starting a project.</h3>
+                    <h2>Starting a new project?<br>Get in touch for a chat.</h2>
                 </div>
                 <div class="col-sm-6">
                     <div class="portfolio-btn">
@@ -18,14 +18,15 @@
                 </div>
 
                 <div class="col-sm-3 col-xs-6">
-                    <ul class="social-links">
-                        <li><a href="mailto:hello@matthewgoodyear.com">Email</a></li>
-                        <li><a href="https://www.instagram.com/gdy.design/">Instagram</a></li>
+                    <ul class="footer-links">
+                        <li><a class="link-line-hide link-line-grey" href="mailto:hello@matthewgoodyear.com">Email</a></li>
+                        <li><a class="link-line-hide link-line-grey" href="https://www.instagram.com/gdy.design/">Instagram</a></li>
+                        <li><a class="link-line-hide link-line-grey" href="/">Archive</a></li>
                     </ul>
                 </div>
 
                 <div class="col-sm-3 col-xs-12">
-                    <p class="back-up" onclick="topFunction()"><a href="#" class="left">Back up</a></p>
+                    <p class="back-up" onclick="topFunction()"><a href="#" class="link-line-show">Back up</a></p>
                 </div>
 
             </div>
