--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,21 +1,25 @@
 {{ partial "header.html" . }}
 
 <div class="wrapper">
-    <h1>
-        I'm Matthew, Logo & Brand Identity Designer</a>.
-    </h1>
+    <div class="row">
+        <div class="col-xs-8">
+            <h1>
+                I'm Matthew,<br>Logo & Brand Identity Designer<br>based in Middlesbrough.
+            </h1>
+        </div>
+    </div>
 
     <div class="row">
     {{ range $i, $e := (where .Data.Pages "Section" "project") }}
         <div class="col-sm-6 col-xs-12 media-outer">
             <a href="{{ .Permalink }}">
                 <div class="media">
-                    <img src="{{ .Params.image }}" alt="{{ .Title }}" class="media-img">
+                    <img src="{{ .Params.thumb }}" alt="{{ .Title }}" class="media-img">
                 </div>
-                <!-- <p class="media-title">{{ .Title }}</p> -->
             </a>
         </div>
     {{ end }}
     </div>
 </div>
+
 {{ partial "footer.html" . }}
