--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,17 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{{ with .Page.Params.Title }}{{ . }} - {{ end }}Goodyear | Logo & Brand Identity</title>
+    <title>{{ with .Page.Params.Title }}{{ . }} — {{ end }}Goodyear — Logo & Brand Identity</title>
     {{ with .Page.Params.description }}
     <meta name="description" content="{{ . }}">
     {{ else }}
-    <meta name="description" content="Hey, I'm Matthew. I'm a Graphic Designer based in Middlesbrough, UK.">
+    <meta name="description" content="I'm Matthew, Logo & Brand Identity Designer based in Middlesbrough.">
     {{ end }}
 
     <link rel="shortcut icon" href="{{ $.Site.BaseURL }}img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="{{ $.Site.BaseURL }}css/flexboxgrid.css">
     <link rel="stylesheet" type="text/css" href="{{ $.Site.BaseURL }}css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Neuton:300" rel="stylesheet">
 
     <script>
         (function (i, s, o, g, r, a, m) {
@@ -36,15 +35,14 @@
             <div class="row">
                 <div class="col-sm-6 col-xs-2">
                     <a class="logo-link" href="{{ $.Site.BaseURL }}">
-                        <img src="{{ $.Site.BaseURL }}img/MG_Logo_Icon_Black@0.5x.png" alt="Logo" class="logo-img">
+                        <img src="{{ $.Site.BaseURL }}img/MG_Logo_Icon_White@0.5x.png" alt="Logo" class="logo-img">
                     </a>
                 </div>
                 <div class="col-sm-6 col-xs-10">
                     <ul class="navigation">
-                        <li><a href="{{ $.Site.BaseURL }}">Work</a></li>
-                        <li><a href="/about">About</a></li>
-                        <li><a href="/portfolio">Portfolio</a></li>
-                        <li><a href="mailto:hello@matthewgoodyear.com">Contact</a></li>
+                        <li><a class="link-line-show" href="{{ $.Site.BaseURL }}">Work</a></li>
+                        <li><a class="link-line-show" href="/about">About</a></li>
+                        <li><a class="link-line-show" href="mailto:hello@matthewgoodyear.com">Contact</a></li>
                     </ul>
                 </div>
             </div>
