--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -1,13 +1,49 @@
 {{ partial "header.html" . }}
 
-<div class="wrapper">
+<div class="col-xs-12">
+    <h1>
+        Simplicity by<br>approach
+    </h1>
+</div>
+
+<div class="wrapper about-page">
     <div class="row">
-        <div class="col-xs-8">
-            <h1>
-                I'm Matthew,<br>Logo & Brand Identity Designer<br>based in Middlesbrough.
-            </h1>
+        <div class="col-xs-12">
+            <img src="{{ $.Site.BaseURL }}img/cities/london.jpg" alt="">
         </div>
     </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <h3>
+                I'm Matthew, Logo & Brand Identity Designer with a minimalist approach.
+            <h3>
+        </div>
+    </div>
+    <div class="row center-xs">
+        <div class="col-xs-6">
+            <h4>
+                Background
+            </h4>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
+            </p>
+        </div>
+    </div>
+    <div class="row center-xs">
+        <div class="col-xs-6">
+            <h4>
+                Approach
+            </h4>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.
+            </p>
+        </div>
+    </div>
+    <h2 class="large-center-link">
+        Starting a project?
+        <br>
+        <a href="/contact" class="standard-link">Get in touch</a>
+    </h2>
 </div>
 
 {{ partial "footer.html" . }}
